# Gix-programing-language

./: .clang-format  .gitattributes  .gitignore  .project.pack  CMakeLists.txt  README.md  STYLE.md  Update 9.25 - remake.md  docs.html  docs.js  main.vix  parser.c  ruls.vix
.VSCodeCounter/2026-04-18_12-01-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-21_22-54-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-21_22-55-00/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-22_22-22-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-22_22-22-15/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Docs/: class.md  enum.md  functions.md  generic.md  getstarted.md  if.md  operations.md  overview.md  ownership.md  struct.md  variables.md
ahh/: naad.rs  rust.rs
auto/: config.toml
auto/src/: command.vix  terminal.vix
core/Option/: main.gix  main.vix
core/Result/: main.gix  main.vix
core/functions/: main.gix  main.vix
core/functions/loop/: chars.gix  chars.vix  range.vix
core/functions/trait/: clone.gix  clone.vix  drop.gix  drop.vix  free.gix  free.vix  index.gix  index.vix  iterator.gix  iterator.vix
core/mem/random/: main.gix  main.vix
core/mem/rotate/: main.gix  main.vix
core/std/Array/: main.vix
core/std/String/: main.vix
core/std/types/str/: slice.vix  transform.vix
core/types/: char.gix  char.vix  main.gix  main.vix
core/types/str/: check.gix  check.vix  operations.vix  search.gix  search.vix
core/types/str/bits/: operations.gix  operations.vix  swar.gix  swar.vix
d/: output.c
docs/: class.html  community.html  enum.html  function.html  generic.html  struct.html  variables.html
examples/enum/: explain.md
examples/enum/src/: main.gix
examples/func/: example.gix  explain.md
examples/func/src/: main.gix
examples/struct/: example.gix  explain.md
examples/struct/src/: main.gix
final/src/token/: lexer.c  parser.c
final/src/token/ast/: ast.h
include/: ast.h  auto.h  diff.h  error.h  file_manager.h  helper.h  import.h  ir.h  lexer.h  parser.h  register.h  symbol_table.h  type.h
include/codegen/: codegen.h
include/footprint/: bytes.h  config.h  footprint.h  pack.h
include/token/: lexer.h  parser.h
include/token/ast/: ast.h  ir.h
src/: file_manager.c  help.txt  import.h  ir_print.c  main.c
src/checker/: expr.c  helper.c  operations.c  stmt.c
src/codegen/: codegen.c  codegen.cpp  linker.cpp
src/codegen/main/: expr.c  operations.c  stmt.c  types.c
src/footprint/: config.c  footprint.c  pack.c
src/helper/: dir.c  error.c  file_manager.c  helper.c
src/include/: register.h  type.h
src/ir/: ir.c
src/register/: auto.c  checker.c  diagnostic.c  generic.c  ir.c  register.c  symbol_table.c  type.c
src/register/checker/: checker.c  ir.c  register.c  type.c
src/syntax/: lexer.c  parser.c
src/token/: error.c  lexer.c  parser.c
src/token/ast/: ast.h
std/Alloc/: main.vix
std/Array/: main.gix
std/Free/: main.vix
std/HashMap/: default_hasher.vix  hash.vix  hasher.vix  hashmap.gix  random_state.vix
std/String/: main.gix  main.vix  search.vix
std/io/: print.vix
std/mem/: alloc.gix  alloc.vix
std/mem/Arc/: arc.gix  weak.vix
std/mem/collections/: box.gix  linkedlist.gix
std/types/str/: conv.gix  conv.vix  join.gix  join.vix  search.gix  search.vix  slice.gix  transform.gix
test/: class_self_call_order.vix  function.gix  if.vix  main.vix  project_pack.fbs  rules.vix  ruls.vix  types.gix  variables.vix
